# pyperfguard

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  rule_request.md
.github/workflows/: ci.yml
examples/: nplusone_demo.py
simulations/: sim_execution_graph_detector.py  sim_n1_cleanup_tasks.py  sim_n1_group_helpers.py  sim_production_impact.py  sim_status_loop_tasks.py
src/pyperfguard/: __init__.py  cli.py  lsp_server.py  plugins.py
src/pyperfguard/_bootstrap/: __init__.py  bootstrap.py
src/pyperfguard/ast_engine/: __init__.py  call_graph.py  context.py  runner.py  visitor.py
src/pyperfguard/core/: __init__.py  config.py  finding.py  frame_utils.py  registry.py  rule.py  severity.py
src/pyperfguard/detectors/: __init__.py  execution_graph.py  nplusone.py
src/pyperfguard/fingerprint/: __init__.py  cql.py  mongo.py  sql.py
src/pyperfguard/integrations/: fastapi.py
src/pyperfguard/patchers/: __init__.py  cassandra_driver.py  dbapi.py  pymongo.py  sqlalchemy.py
src/pyperfguard/reporters/: __init__.py  json_out.py  sarif.py  terminal.py
src/pyperfguard/rules/: __init__.py  allow_filtering.py  await_in_loop.py  bare_except.py  blocking_cassandra_in_async.py  cache_on_method.py  cassandra_batch_loop.py  cassandra_in_query.py  cassandra_prepare_loop.py  datetime_in_loop.py  deepcopy_in_loop.py  import_in_function.py  isinstance_with_list.py  late_binding_closure.py  list_before_for.py  loop_append_to_comprehension.py  loop_dict_to_comprehension.py  mutable_default.py  open_in_loop.py  prefer_tuple_over_list_for_in.py  recompile_in_loop.py  sequential_awaits_in_loop.py  sleep_in_async.py  string_concat_loop.py  try_except_in_loop.py  unnecessary_iterable_for_in.py
src/pyperfguard/runtime_engine/: __init__.py  engine.py  event_bus.py  events.py  import_hook.py  patcher.py  profile.py  scope.py
tests/: conftest.py  test_bootstrap.py  test_call_graph.py  test_cli.py  test_config.py  test_event_bus.py  test_execution_graph.py  test_finding.py  test_frame_utils.py  test_import_hook.py  test_lsp_server.py  test_registry.py  test_reporters.py  test_runner.py  test_scope.py  test_visitor.py
tests/detectors/: test_nplusone.py
tests/e2e/: test_e2e_ast.py  test_e2e_fingerprint.py  test_e2e_runtime.py
tests/e2e/fixtures/: async_api.py  cassandra_service.py  clean_code.py  data_pipeline.py  django_views.py
tests/fingerprint/: test_cql.py  test_mongo.py  test_sql.py
tests/patchers/: test_dbapi.py
tests/rules/: test_allow_filtering.py  test_await_in_loop.py  test_bare_except.py  test_blocking_cassandra_in_async.py  test_cache_on_method.py  test_cassandra_rules.py  test_datetime_in_loop.py  test_deepcopy_in_loop.py  test_import_in_function.py  test_isinstance_with_list.py  test_late_binding_closure.py  test_list_before_for.py  test_loop_append_to_comprehension.py  test_loop_dict_to_comprehension.py  test_mutable_default.py  test_open_in_loop.py  test_prefer_tuple_over_list_for_in.py  test_recompile_in_loop.py  test_sequential_awaits_in_loop.py  test_sleep_in_async.py  test_string_concat_loop.py  test_try_except_in_loop.py  test_unnecessary_iterable_for_in.py
